



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="russodiego.nursingapp.LoginActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <!-- Logo Sapienza -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="false"
        android:background="@color/windowsBackground"
        android:contentDescription="logo_sapienza"
        android:scaleType="centerInside"
        android:src="@drawable/logo_sapienza"
        android:layout_gravity="left"/>

    <!-- Titolo App -->

    <!-- Logo Umberto I -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="353dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:adjustViewBounds="true"
        android:background="@color/windowsBackground"
        android:contentDescription="myapp"
        android:scaleType="centerInside"
        android:src="@drawable/logo_umberto" />

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:clipToPadding="false"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowsBackground"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="552dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="26dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="552dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="96dp" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="552dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="164dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
